<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComprobarRecursos</string>
    <string name="action_settings">Settings</string>
    <string name="comprobar_propiedades">Propiedades</string>
    <string name="hello_world">Hello world!</string>
    <string name="stringbuffer">StringBuffer</string>
    <string name="comprobar_layout">Testear layout</string>
    <string name="comprobar_colores">Testear colores</string>
    <string name="comprobar_drawable">Testear drawable</string>
    <string name="comprobar_strings">Testear strings</string>
    <string name="comprobar_raw">Testear raw</string>
    <string name="comprobar_plural">Testear plural</string>
    <string name="comprobar_asset">Testear asset</string>
    <string name="comprobar_arrays">Testear arrays</string>
    <string name="comprobar_xml">Testear XML</string>
    
    <!-- Principales -->
    <string name="titulo">Aplicacion de recursos</string>
    
    <!-- Plurales -->
    <plurals name="test_plurals">
        <item quantity="one">Eres uno</item>
        <item quantity="other">Sois varios</item>
    </plurals>
    
    <!-- Arrays -->
    <string-array name="test_array">
        <item>Barcelona</item>
        <item>Lleida</item>
        <item>Tarragona</item>
    </string-array>
    
    <!-- Colores -->
    <color name="red">#F00</color>
    <color name="otro">#ffffff00</color>
    
    <dimen name="medio">10px</dimen>
    <dimen name="alto">250dp</dimen>
    

</resources>













